codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__luna_reserve_usage_tests__luna_reserve_selector_second_choice.snap
---
source: tui/src/chatwidget/tests/luna_reserve_usage_tests.rs
expression: "normalize_snapshot_paths(render_bottom_popup(&chat, 90))"
---
  You’re now using Luna, a faster model for simpler tasks.
  Add credits or upgrade to continue using the most advanced models.

  1. Add credits
› 2. Upgrade
  3. Continue with Luna Reserve

  Press enter to confirm or esc to continue working
