codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__luna_reserve_usage_tests__luna_reserve_usage_running.snap
---
source: tui/src/chatwidget/tests/luna_reserve_usage_tests.rs
expression: rendered
---
• Working (0s • esc to interrupt)


› x

  tab to queue message                                       100% context left
